# data-chat

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  setup.py
app/: streamlit_app.py
docs/: step3-base-tool-infrastructure.md  step5-get-tables-tool.md
examples/google_adk/: basic_agent.py
examples/langchain/: basic_agent.py
examples/raw_api/: basic_agent.py
src/data_chat/: __init__.py  _version.py  agent.py  client.py  context.py  exceptions.py  llm.py  memory.py  utils.py
src/data_chat/google_adk_tools/: __init__.py  builder.py
src/data_chat/langchain_tools/: __init__.py  builder.py
src/data_chat/tools/: __init__.py  _token_estimator.py  base.py  helpers.py  lineage.py  navigation.py  query.py  search.py  tables.py
tests/unit/: test_agent.py  test_agent_error_handling.py  test_builders.py  test_context.py  test_exceptions.py  test_helpers.py  test_lineage.py  test_llm.py  test_memory.py  test_navigation.py  test_tools.py
